<!--
  ~ Copyright (c) 2020. All rights reserved.
  ~
  ~ Author: Osman Karagöz
  ~ Licensed under the GNU General Public License, version 3.
  ~ See the file http://www.gnu.org/copyleft/gpl.txt
  -->

<resources>
    <string name="app_name">LaBebe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to LaBebe parental control application!\n\nThis application protects your child from blocked applications and limiting time for using this device.\n\nFirst of all this application needs some settings and permissions.\n\nLets do some settings, press bellowing button…</string>
    <string name="start_first_install">Start Installing</string>
    <string name="or">OR</string>
    <string name="forgottenPassword">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="email_required">Email address is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="user_not_found">User Not Found</string>
    <string name="password_incorrect">Password is incorrect, please try again!</string>
    <string name="unknown_issue">Unknown issue, please try again!</string>
    <string name="too_many_login_try">Too many unsuccessful login attempts. Please try again later.</string>
    <string name="password_reset_mail_sent">Password reset link sent to your email address. Please fallow that instructions!</string>
    <string name="re_password">Re-enter Password</string>
    <string name="password_mismatch">Password mismatch, please try again!</string>
    <string name="children">Children</string>
    <string name="parent">Parent</string>
    <string name="device_type_selection">This device used by who?</string>
    <string name="next_page">Next Page</string>
    <string name="general_app_decisions">Please select the apps you want to use unlimited by everyone</string>
    <string name="child_app_decisions">Please select the apps you want to usable by child</string>
    <string name="there_is_no_child">There is no children yet. Please add one or more children with using plus button!</string>
    <string name="set_parent_password">Setting parental access password.\n\nThis password is necessary for change application settings or uninstalling application when you don\'t need anymore.</string>
    <string name="name">Name</string>
    <string name="born">Born Year</string>
    <string name="app_decisions">App Decisions</string>
    <string name="time_limitations">Time Limitation</string>
    <string name="reset_password">Reset Password</string>
    <string name="color">Color</string>
    <string name="pick_color">Pick a color</string>
    <string name="password_reset">Password reset is successful. On first access new password will installed.</string>
    <string name="field_required">This field is required</string>
    <string name="delete">Delete</string>
    <string name="girl">Girl</string>
    <string name="boy">Boy</string>
    <string name="are_you_sure_to_delete">Are you sure to delete child?</string>
    <string name="daily">Daily</string>
    <string name="time_limit_type">Time Limit Type</string>
    <string name="limited_hours">Limited Hours</string>
    <string name="daily_time_limits">Daily Time Limit</string>
    <string name="app_time_limit">App Time Limit</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="duration">Duration</string>
    <string name="choose_app">Choose App</string>
    <string name="new_time_limit">New Time Limit</string>
    <string name="cannot_save_limitation">Limitation can not saved. Next time fill all fields.</string>
    <string name="child_time_limitations">Please add time limitations to allow your child access applications</string>
    <string name="set_application_permissions_first_time">This application needs some permissions and accessibility service which listed below for working correctly.</string>
    <string name="permission_application_overlay">This permission will be used to alert the user when attempting to open blocked apps</string>
    <string name="permission_application_overlay_checkbox">Allow show on top of applications</string>
    <string name="permission_accessibility_service_checkbox">Start LaBebe accessibility service</string>
    <string name="permission_accessibility_service">This service keeps track of how much user uses which app and prevents it from opening a blocked app.</string>
    <string name="permission_on_parental_device">\n\nThese settings are no longer required for parental devices.\nHowever, when you want to lend your device to children, you can grant these permissions.</string>
    <string name="finish_first_install">Complete Installing</string>
    <string name="finish">Congratulations!\n\nFirst Installing is finished.\n\nIf you want to change any of these settings or sending message to your children, you can use this application later.\n\nPlease do not forget and do not share your parental password.\n\nCreated children accounts password will set on first access by your children</string>
    <string name="select_for_login">Select for Login</string>
    <string name="about_text">LaBebe - Parental Management Application\n\nLicensed under GPL v3\n\nOsman Karagöz [osmank3 [at] gmail.com], 2020</string>
    <string name="menu_about">About</string>
    <string name="you_cannot_use">You cannot use this application because your parent do not allow to you use it.</string>
    <string name="you_are_in_limited_hours">You are in limited blocked hours, which determined by your parent.</string>
    <string name="you_cannot_use_today">You cannot use applications because your time period defined for today has expired.</string>
    <string name="you_cannot_use_today_app">You cannot use this application because your time period defined for today has expired.</string>
    <string name="password_change">Change Password</string>
    <string name="messages">Messages</string>
    <string name="statistics">Statistics</string>
    <string name="lend">Lend Device</string>
    <string name="uninstall">Uninstall</string>
    <string name="password_new">New Password</string>
    <string name="are_you_sure_to_uninstall">Are you sure to Uninstall this app?</string>
    <string name="are_you_sure_to_uninstall_description">If you want to delete this application select OK. When you select it, Accessibility service will stop and you can uninstall this application from applications.</string>
    <string name="child">Child</string>
    <string name="message">Message</string>
    <string name="get_back">Get back</string>
    <string name="all_time">All Time</string>
    <string name="time_period">Time Period</string>
    <string name="today">Today</string>
    <string name="choose_time_period">Choose Period</string>
    <string name="message_required">Message required!</string>
    <string name="new_message">New Message</string>
    <string name="you_have_new_message">"%s, you have new message from %s. "</string>
</resources>
