<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. All rights reserved.
  ~
  ~ Author: Osman Karagöz
  ~ Licensed under the GNU General Public License, version 3.
  ~ See the file http://www.gnu.org/copyleft/gpl.txt
  -->

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textViewRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/time_limit_type"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButtonLimited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/limited_time_black_36dp"
                android:checked="true"
                android:text="@string/limited_hours" />

            <RadioButton
                android:id="@+id/radioButtonDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/limit_timer_black_36dp"
                android:text="@string/daily_time_limits" />

            <RadioButton
                android:id="@+id/radioButtonAppDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/limit_app_timer_black_24dp"
                android:text="@string/app_time_limit" />

        </RadioGroup>


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/monday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/tuesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/wednesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/thursday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/friday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/saturday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sunday" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:tag="@string/start_time"
            android:text="@string/start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:tag="@string/end_time"
            android:text="@string/end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStartTime" />

        <Button
            android:id="@+id/btnDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:tag="@string/duration"
            android:text="@string/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEndTime" />

        <Button
            android:id="@+id/btnChooseApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/choose_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDuration" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChooseApp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>