<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. All rights reserved.
  ~
  ~ Author: Osman Karagöz
  ~ Licensed under the GNU General Public License, version 3.
  ~ See the file http://www.gnu.org/copyleft/gpl.txt
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textPermissions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/set_application_permissions_first_time"
        android:textAlignment="center"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/llAppOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llAppOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llAccessibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cbAppOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/permission_application_overlay_checkbox"
            android:textSize="@dimen/big_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_application_overlay"
            android:textSize="@dimen/big_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAccessibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnPermission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cbAccessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/permission_accessibility_service_checkbox"
            android:textSize="@dimen/big_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_accessibility_service"
            android:textSize="@dimen/big_text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPermission"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_normal"
        android:enabled="false"
        android:text="@string/next_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>